#################################################
# Core
#################################################

[project]
name = "pipeline"
version = "0.1.0"
description = "Simple RESTful API for pipeline configuration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.2",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.5.2",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "mypy>=1.12.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

#################################################
# Ruff
#################################################

[tool.ruff]
respect-gitignore = true
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default
select = ["E", "F", "PT", "C4", "I"]
ignore = ["E501"]

per-file-ignores = {}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

#################################################
# Pytest
#################################################

[tool.pytest.ini_options]
addopts = "--strict-markers --maxfail 1 --cov tests/ --no-header"
markers = """
    integration: mark a test as an integration test.
"""
console_output_style = "progress"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
